; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/random/extr_ivy.c_x86_rdseed_store.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/random/extr_ivy.c_x86_rdseed_store.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@RETRY_COUNT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @x86_rdseed_store to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @x86_rdseed_store(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %5 = load i32, i32* @RETRY_COUNT, align 4
  store i32 %5, i32* %4, align 4
  %6 = load i32, i32* %4, align 4
  %7 = call { i32, i32 } asm sideeffect "1:\0A\09rdseed\09$1\0A\09jc\09\092f\0A\09dec\09$0\0A\09jne\091b\0A\092:", "=r,=r,0,~{cc},~{dirflag},~{fpsr},~{flags}"(i32 %6) #1, !srcloc !2
  %8 = extractvalue { i32, i32 } %7, 0
  %9 = extractvalue { i32, i32 } %7, 1
  store i32 %8, i32* %4, align 4
  store i32 %9, i32* %3, align 4
  %10 = load i32, i32* %3, align 4
  %11 = load i32*, i32** %2, align 8
  store i32 %10, i32* %11, align 4
  %12 = load i32, i32* %4, align 4
  ret i32 %12
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
!2 = !{i32 322, i32 327, i32 348, i32 366, i32 384, i32 402}
